Fix datatables controls alignment

--- a/assets/css/datatables.css
+++ b/assets/css/datatables.css
@@ -4,6 +4,19 @@
 
 div.dataTables_wrapper {
     font-size: 0.8em;
+    margin: 20px 0;
+}
+
+div.dataTables_wrapper .dataTables_length {
+    margin: 10px;
+}
+
+div.dataTables_wrapper .dataTables_filter input {
+    background-color: #fff;
+    width: inherit;
+    padding: inherit;
+    border-radius: 0;
+    margin: 10px 0 10px 10px;
 }
 
 div.dataTables_wrapper table thead tr {
